fix 01 FP資格についての情報を追加

--- a/_posts/2021-01-03-1.md
+++ b/_posts/2021-01-03-1.md
@@ -13,5 +13,6 @@ title: 1. 第一回放送、シン・エヴァ
 
 ## 関連リンク
 
+- [ファイナンシャルプランナーは最低で最高の資格　皆さんにお勧めしたいです](https://www.youtube.com/watch?v=Fh_bOVymSrY)
 - [映画『ベイビー・ドライバー』](https://bd-dvd.sonypictures.jp/babydriver/)
 - [『シン・エヴァンゲリオン劇場版』本予告【公式】](https://www.youtube.com/watch?v=10ict3GCxGY)
