--- a/_posts/2021-01-17-2.md
+++ b/_posts/2021-01-17-2.md
@@ -5,18 +5,21 @@ actor_ids:
 audio_file_path: /audio/002.mp3
 audio_file_size: 0
 date: 2021-01-17 18:53:00 +0900
-description: 土井と松下の2人でゲームについて、エヴァグッズについて話しました
+description: 土井と松下の2人でゲームについて、シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れることについて話しました
 duration: "84:23"
 layout: article
 title: 2.サイバーか、パンクか、2077か？
 ---
-
+第二回できた / 親知らずを抜いた部分はどうなるのか / 無人島に歯医者を持っていきたい / 森博嗣のWシリーズはエピローグでイチャイチャする / ニアオートマタ系SFとブレードランナー系SF / 逆張りの人が勧めるブレードランナー / シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れる / 欲しいコラボグッズとは / 天気の子のサントリー製品 / いい眼鏡欲しくなる / 外に出ないと未知との遭遇が少なくなる / FPの勉強してる / 電卓使いこなしたい / 英語 / 入ってみたいコミュニティ / 有線イヤホンすごい / イヤホンのエイジング / イヤホンのレビューは必然的に怪しくなる
 ## 関連リンク
-
 - [血か、死か、無か? Is It Blood, Death or Null?](https://bookclub.kodansha.co.jp/buy?item=0000212990)
+- [ニーア オートマタ](https://www.jp.square-enix.com/nierautomata/)
 - [サイバーパンク2077](https://www.spike-chunsoft.co.jp/cyberpunk2077/)
 - [サントリー映画『天気の子』を君は見たか](https://note.com/ggkiev/n/nd2cd7a4f7241)
 - [レッツノートが25周年記念モデル、「シン・エヴァ」コラボ特典も！」](https://news.mynavi.jp/article/20210113-1640287/)
+- [JINSポケモンモデル](https://www.jins.com/jp/collabo/pokemon/)
+- [哲学の誤配](https://www.amazon.co.jp/dp/B088QZDG2V)
+- [カシオ グリーン購入法適合電卓](https://www.amazon.co.jp/dp/B000UZRNJG)
 - [SHURE イヤホン SE215](https://www.amazon.co.jp/dp/B00A16BT4E)
 - [final E3000](https://www.amazon.co.jp/dp/B071FB3PNM)
 
