--- a/_posts/2021-01-17-2.md
+++ b/_posts/2021-01-17-2.md
@@ -10,7 +10,7 @@ duration: "84:23"
 layout: article
 title: 2.サイバーか、パンクか、2077か？
 ---
-第二回できた / 親知らずを抜いた部分はどうなるのか / 無人島に歯医者を持っていきたい / 森博嗣のWシリーズはエピローグでイチャイチャする / ニアオートマタ系SFとブレードランナー系SF / 逆張りの人が勧めるブレードランナー / シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れる / 欲しいコラボグッズとは / 天気の子のサントリー製品 / いい眼鏡欲しくなる / 外に出ないと未知との遭遇が少なくなる / FPの勉強してる / 電卓使いこなしたい / 英語 / 入ってみたいコミュニティ / 有線イヤホンすごい / イヤホンのエイジング / イヤホンのレビューは必然的に怪しくなる
+第二回できた / 親知らずを抜いた部分はどうなるのか / ニアオートマタ系SFとブレードランナー系SF / シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れる / 欲しいコラボグッズとは / 外に出ないと未知との遭遇が少なくなる / 電卓使いこなしたい / イヤホンのレビューは必然的に怪しくなる
 ## 関連リンク
 - [血か、死か、無か? Is It Blood, Death or Null?](https://bookclub.kodansha.co.jp/buy?item=0000212990)
 - [ニーア オートマタ](https://www.jp.square-enix.com/nierautomata/)
