--- a/_posts/2021-01-17-2.md
+++ b/_posts/2021-01-17-2.md
@@ -5,7 +5,7 @@ actor_ids:
 audio_file_path: /audio/002.mp3
 audio_file_size: 0
 date: 2021-01-17 18:53:00 +0900
-description: 土井と松下の2人でゲームについて、シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れることについて話しました
+description: 土井と松下の2人でゲームについて、シン・エヴァ延期でコンビニにエヴァのコラボ商品が溢れることについて話しました。
 duration: "84:23"
 layout: article
 title: 2.サイバーか、パンクか、2077か？
