--- a/_posts/2021-02-14-4.md
+++ b/_posts/2021-02-14-4.md
@@ -16,6 +16,7 @@ title: 4.ゲーミングバレンタインデー
 - [DEATH STRANDING](http://www.kojimaproductions.jp/death_stranding.html)
 - [あつまれどうぶつの森](https://www.nintendo.co.jp/switch/acbaa/index.html)
 - [夏休み](https://www.amazon.co.jp/dp/4087467082)
+- [WindowsPC - peipeipe.net](https://www.peipeipe.net/2021-02-21-windows-pc/)
 - [Ryzen5](https://www.amd.com/ja/processors/ryzen)
 
 お便りはこちらへ<br/>
