--- a/_posts/2021-02-28-5.md
+++ b/_posts/2021-02-28-5.md
@@ -5,7 +5,7 @@ actor_ids:
 audio_file_path: /audio/005.mp3
 audio_file_size: 0
 date: 2021-02-28 17:27:00 +0900
-description: 土井と松下の2人ポケモンと自動車について話しました。
+description: 土井と松下の2人でポケモンと自動車について話しました。
 duration: "72:19 "
 layout: article
 title: 5.右ストレート、左留年
