--- a/_posts/2021-03-14-6.md
+++ b/_posts/2021-03-14-6.md
@@ -8,7 +8,7 @@ date: 2021-03-14 21:30:00 +0900
 description: 土井と松下の2人でシン・エヴァの感想を話しました。
 duration: "43:03"
 layout: article
-title: 6.シン・エヴァンゲリオン感想：序　冒頭43分03秒
+title: 6-1. シン・エヴァンゲリオン感想：序　冒頭43分03秒
 ---
 この放送には人類補完計画、及びそれに関連した情報が含まれています。
 
