チビサン→オチビサンに変更

--- a/_posts/2021-03-14-6-1.md
+++ b/_posts/2021-03-14-6-1.md
@@ -21,7 +21,7 @@ title: 6-1. シン・エヴァンゲリオン感想：序　冒頭43分03秒
 - [エヴァンゲリオン公式サイト](https://www.evangelion.co.jp/)
 - [≠ME （ノットイコールミー）/ 秘密インシデント](https://www.youtube.com/watch?v=dpSgsHxhWbA)
 - [エヴァンゲリオン京都基地｜東映太秦映画村](https://www.toei-eigamura.com/eva/)
-- [チビサン 公式サイト｜安野モヨコ](https://ochibisan.com/)
+- [オチビサン 公式サイト｜安野モヨコ](https://ochibisan.com/)
 - [この世界の片隅に【映画】](https://konosekai.jp/)
 
 
