--- a/_posts/2021-03-19-6-3.md
+++ b/_posts/2021-03-19-6-3.md
@@ -17,7 +17,7 @@ image: /images/itunesartwork.jpg
 シン・エヴァンゲリオンについて130分近く喋ったので3回にわけました。
 
 
-## #シン・エヴァ感想シリーズ
+## シン・エヴァ感想シリーズ
 - [6-1. シン・エヴァンゲリオン感想：序　冒頭43分03秒](https://www-de-tsukamaete.github.io/episode/6-1)
 - [6-2. シン・エヴァンゲリオン感想：破　映画のシナリオ通りに](https://www-de-tsukamaete.github.io/episode/6-2)
 - [→ 6-3. シン・エヴァンゲリオン感想：Q　この感想の（さらにいくつもの）片隅に](https://www-de-tsukamaete.github.io/episode/6-3)
