add twitter card

--- a/_posts/2021-03-19-6-3.md
+++ b/_posts/2021-03-19-6-3.md
@@ -9,7 +9,7 @@ description: 土井と松下の2人でシン・エヴァの感想を話しまし
 duration: "38:55"
 layout: article
 title: 6-3. シン・エヴァンゲリオン感想：Q　この感想の（さらにいくつもの）片隅に
-image: /images/itunesartwork.jpg
+image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 ---
 この放送には人類補完計画、及びそれに関連した情報が含まれています。
 
