--- a/_posts/2021-03-19-6-3.md
+++ b/_posts/2021-03-19-6-3.md
@@ -25,6 +25,7 @@ image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 
 ## 関連リンク
 - [エヴァンゲリオン公式サイト](https://www.evangelion.co.jp/)
+- [映画ドラえもん のび太の新魔界大冒険～7人の魔法使い～|Amazon](https://www.amazon.co.jp/gp/video/detail/B019GPDIM6/ref=atv_dp_share_cu_r)
 
 お便りはこちらへ<br/>
 www-de-tsukamaete@googlegroups.com
