--- a/_posts/2021-03-28-7.md
+++ b/_posts/2021-03-28-7.md
@@ -15,15 +15,15 @@ image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 
 ## 関連リンク
 - [映画『花束みたいな恋をした』公式サイト](https://hana-koi.jp/)
-- [ぼくは愛を証明しようと思う。 (幻冬舎文庫) | 藤沢 数希 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4344427262)
-- [うる星やつら2 ビューティフル・ドリーマー [DVD] | アニメ](https://www.amazon.co.jp/dp/B00006C1W0)
-- [赤朽葉家の伝説 (創元推理文庫) | 桜庭 一樹 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4488472028)
-- [こちらあみ子 (ちくま文庫) | 今村 夏子 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4480431829)
-- [スイートリトルライズ | 江國 香織 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4344004884)
-- [ゼロ年代の想像力 (ハヤカワ文庫 JA ウ 3-1) | 宇野 常寛 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4150310475)
-- [第三十二回文学フリマ東京 (2021/5/16) | 文学フリマ](https://bunfree.net/event/tokyo32/)
-- [NHKにようこそ! (角川文庫) | 滝本 竜彦, 安倍 吉俊 |本 | 通販 | Amazon](https://www.amazon.co.jp/dp/4043747020)
-- [NHKにようこそ！(8) (角川コミックス・エース) | 滝本 竜彦, 大岩 ケンヂ | 少年マンガ | Kindleストア | Amazon](https://www.amazon.co.jp/dp/B0093G8Z6S)
+- [ぼくは愛を証明しようと思う。 (幻冬舎文庫)  藤沢 数希 本    Amazon](https://www.amazon.co.jp/dp/4344427262)
+- [うる星やつら2 ビューティフル・ドリーマー [DVD]  アニメ](https://www.amazon.co.jp/dp/B00006C1W0)
+- [赤朽葉家の伝説 (創元推理文庫)  桜庭 一樹 本    Amazon](https://www.amazon.co.jp/dp/4488472028)
+- [こちらあみ子 (ちくま文庫)  今村 夏子 本    Amazon](https://www.amazon.co.jp/dp/4480431829)
+- [スイートリトルライズ  江國 香織 本    Amazon](https://www.amazon.co.jp/dp/4344004884)
+- [ゼロ年代の想像力 (ハヤカワ文庫 JA ウ 3-1)  宇野 常寛 本    Amazon](https://www.amazon.co.jp/dp/4150310475)
+- [第三十二回文学フリマ東京 (2021/5/16)  文学フリマ](https://bunfree.net/event/tokyo32/)
+- [NHKにようこそ! (角川文庫)  滝本 竜彦, 安倍 吉俊 本    Amazon](https://www.amazon.co.jp/dp/4043747020)
+- [NHKにようこそ！(8) (角川コミックス・エース)  滝本 竜彦, 大岩 ケンヂ  少年マンガ  Kindleストア  Amazon](https://www.amazon.co.jp/dp/B0093G8Z6S)
 - [『NHKにようこそ！』最新作が制作決定しました！ - YouTube](https://www.youtube.com/watch?v=C53Wwz60fdA)
 
 
