--- a/_posts/2021-03-28-7.md
+++ b/_posts/2021-03-28-7.md
@@ -14,6 +14,7 @@ image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 
 
 ## 関連リンク
+- [NHKオンデマンド プロフェッショナル　仕事の流儀 「庵野秀明スペシャル」](https://www.nhk-ondemand.jp/goods/G2021113018SA000/index.html)
 - [映画『花束みたいな恋をした』公式サイト](https://hana-koi.jp/)
 - [ぼくは愛を証明しようと思う。 (幻冬舎文庫)  藤沢 数希 本    Amazon](https://www.amazon.co.jp/dp/4344427262)
 - [うる星やつら2 ビューティフル・ドリーマー [DVD]  アニメ](https://www.amazon.co.jp/dp/B00006C1W0)
