--- a/_posts/2021-03-28-7.md
+++ b/_posts/2021-03-28-7.md
@@ -12,6 +12,9 @@ title: 7. LRで聞く『花束みたいな恋をした』の感想
 image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 ---
 
+## 訂正
+40分ごろ松下が『ゼロ年代の想像力』の作者を間違えて森博嗣さんと言っていますが、正しくは宇野常寛さんです。失礼しました。
+
 
 ## 関連リンク
 - [NHKオンデマンド プロフェッショナル　仕事の流儀 「庵野秀明スペシャル」](https://www.nhk-ondemand.jp/goods/G2021113018SA000/index.html)
