--- a/_posts/2021-04-11-8.md
+++ b/_posts/2021-04-11-8.md
@@ -14,7 +14,7 @@ image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 
 
 ## 関連リンク
-- [上京生活録イチジョウ - 福本伸行/萩原天晴/三好智樹/瀬戸義明 / 第１話　東京 | コミックDAYS](https://comic-days.com/episode/13933686331794993306)
+- [上京生活録イチジョウ  福本伸行/萩原天晴/三好智樹/瀬戸義明  第１話　東京  コミックDAYS](https://comic-days.com/episode/13933686331794993306)
 - [PlayStation®5](https://www.playstation.com/ja-jp/ps5/)
 - [Horizon Zero Dawn  プレイステーション](https://www.jp.playstation.com/games/horizon-zero-dawn/)
 - [ノマド　漂流する高齢労働者たち Kindleストア](https://www.amazon.co.jp/dp/B08MQ1TN8D)
