--- a/_posts/2021-05-23-11.md
+++ b/_posts/2021-05-23-11.md
@@ -5,7 +5,7 @@ actor_ids:
 audio_file_path: /audio/011.mp3
 audio_file_size: 0
 date: 2021-05-23 23:26:00 +0900
-description: 土井と松下の2人でTwitterについて、商業翻訳について、FP3級試験受けた、について話しました。
+description: 土井と松下の2人でTwitterについて、商業翻訳について、FP3級試験受けたについて話しました。
 duration: "63:40"
 layout: article
 title: 11. 大好きで悩ましいTwitter
