--- a/_posts/2021-05-23-11.md
+++ b/_posts/2021-05-23-11.md
@@ -16,7 +16,7 @@ image: https://www-de-tsukamaete.github.io/images/itunesartwork.jpg
 ## 関連リンク
 - [おーちゃん【1級FP技能士】TV](https://www.youtube.com/c/%E3%83%93%E3%82%B8%E3%83%8D%E3%82%B9%E3%82%A4%E3%83%B3%E3%83%99%E3%82%B9%E3%82%BF)
 - [Twitterの定額制サービスは「Twitter Blue」で月額2.99ドル、とマンチュン氏 - ITmedia NEWS](https://www.itmedia.co.jp/news/articles/2105/16/news015.html)
-- [slackのtimes導入のすすめ - Qiita](https://qiita.com/w-tdon/items/e2ed168ced63dffa6035)
+- [slackのtimes導入のすすめ  Qiita](https://qiita.com/w-tdon/items/e2ed168ced63dffa6035)
 - [Helltakerほんやく後記｜陽炎01型　note](https://note.com/kagerou01gata/n/n93c06b21859b)
 - [将棋ウォーズ公式-日本将棋連盟公認-オンライン将棋ゲームの決定版](https://shogiwars.heroz.jp/)
 
